--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "fumadocs-core": "16.4.8",
     "fumadocs-mdx": "14.2.6",
+    "fumadocs-openapi": "^10.2.6",
     "fumadocs-ui": "16.4.8",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
@@ -26,10 +27,10 @@
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3",
-    "eslint-config-next": "16.1.4",
-    "eslint": "^9.39.2"
+    "typescript": "^5.9.3"
   }
 }
